
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.remotecontrol";
option java_outer_classname = "RemoteControl";
option objc_class_prefix = "HLW";

package remotecontrol;

service RemoteControl {
    rpc ApplyForce(ForceRequest) returns (ForceResponse) {}
}

message GeneralizedForce {
    float x = 1;
    float y = 2;
    float z = 3;
    float k = 4;
    float m = 5;
    float n = 6;
}

message ForceRequest {
    string vesselId = 1;
    GeneralizedForce generalizedForce = 2;
}

message ForceResponse {
    bool success = 1;
}